--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Giacomo Randazzo 
 email: giacomoran@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This is where I'll share stuff about me or about what I do. 
+   At some point I'll add a description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ran3000.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: RAN3000 
