--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,9 @@ plugins:
 header_pages: 
   - none
 
+disqus:
+  shortname: ran3000
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
